hphp/hack/test/typecheck/lambda/lambda_any_bad.php.exp
File "lambda_any_bad.php", line 6, characters 7-9:
You are trying to access the member foo but this is not an object, it is an int (Typing[4062])
File "lambda_any_bad.php", line 4, characters 29-29:
Definition is here
